Partway through API updates to make auto-race creation
